# simple_raytracer

./: CMakeLists.txt  CMakeLists.txt.in  Doxyfile
include/: console.h  gfx.h  linalg.h  mat.h  primitives.h  ray.h  result.h  vec3.h  vector.h  world.h
lib/: gfx.cpp  linalg.cpp  primitives.cpp  result.cpp  vec3.cpp  world.cpp
simple_raytracer/: CMakeLists.txt
src/: console.cpp  linalg.cpp  main.cpp  primitives.cpp  ray.cpp  result.cpp  vec3.cpp  vector.cpp
tests/: test_linalg.cpp  test_mat.cpp  test_vec3.cpp
